--- a/aboutus.html
+++ b/aboutus.html
@@ -26,9 +26,8 @@
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" width="25px" height ="25px" class="img-fluid" alt="">     Comp-3 Interactive</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,8 +61,7 @@
           <img src="img/WebsiteHeader.png" class="img-fluid" alt="">
         </div>
       </div>
-	  
-	<div class="social d-flex justify-content-center">
+	  	<div class="social d-flex justify-content-center">
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
@@ -82,27 +80,45 @@
 	</div>
   </section> 
 
-  <!-- Projects Section -->
-  <section id="previousprojects" class="projects-section bg-black">
+ 
+    <!-- About Section -->
+  <section id="about" class="projects-section bg-black">
     <div class="container">
-	
-	  <h1 class="text-white text-center">Previous Projects</h1></br>
 
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="" alt="">
-        </div>
-		
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
+          <div class="bg-dark text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h1 class="text-white">N/A</h1>
+                <h1 class="text-white">About Us</h1>
                 <p class="mb-0 text-white-50">
-					There are no projects at this time
-					</p></br>
+					We're <b>Comp-3 Interactive</b>. An indie game development company located in the North West of England. We provide free to play Android mobile games via the Google Play store.</br></br>
+					We also help both seasoned and beginner developers on their journey of game development by providing useful hints and tips for the Unity3D game engine via our Facebook, Instagram and Twitter accounts.</br></br>
+					Further to that, we also provide more in-depth tutorials for Unity3D on our YouTube channel which cover a wide array of subjects.</br></br>
+					Consider following and subscribing if you'd like to learn how to make your own games in a quick and painless way!</br></br></p>
+					
+					<div class="social d-flex justify-content-center">
+						<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+							<i class="fab fa-youtube"></i>
+						</a>
+						<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+							<i class="fab fa-facebook"></i>
+						</a>
+						<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="http://www.twitter.com/comp3int" class="mx-2">
+							<i class="fab fa-twitter"></i>
+						</a>
+						<a href="http://www.github.com/comp3interactive" class="mx-2">
+							<i class="fab fa-github"></i>
+						</a>
+					</div>
                 <hr class="d-none d-lg-block mb-0 ml-0">
+				<p class="mb-0 text-white-50"></br>
+					For business enquiries please contact: <a href="mailto:comp3.interactive@gmail.com">comp3.interactive@gmail.com</a>
+				</p>
               </div>
             </div>
           </div>
@@ -111,7 +127,6 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="bg-dark small text-center text-white-50">
   	<div>
 		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
