--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a class="nav-link js-scroll-trigger" href="previousprojects.html">Previous Projects</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#about">About Us</a>
+            <a class="nav-link js-scroll-trigger" href="aboutus.html">About Us</a>
           </li>
         </ul>
       </div>
@@ -63,13 +63,18 @@
       </div>
 	  
 	  <!-- Header Links -->	
+	  
 	<div>
-		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt="">          YouTube</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt="">          Facebook</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt="">          Instagram</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt="">          Twitter</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt="">          Google Play</button></br></br>
-		<button type="button" class="btn btn-dark" style="width:300px;height:7em;min-width:300px;min-height:7em;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt="">          Buy Me A Coffee</button></br></br></br>
+		<p class="mb-0 text-white-50">Join Us</p>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt=""></br></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://github.com/Comp3interactive?tab=repositories')"><img src="img/SocialIcons/GitHub.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://comp3interactive.itch.io')"><img src="img/SocialIcons/ItchIO.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://www.linkedin.com/in/michael-lythgoe')"><img src="img/SocialIcons/LinkedIn.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt=""></button></br></br></br>
     </div>
   </section> 
 
@@ -133,49 +138,6 @@
 
     </div>
   </section>
-  
-    <!-- About Section -->
-  <section id="about" class="projects-section bg-black">
-    <div class="container">
-
-      <!-- Project One Row -->
-      <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <div class="bg-dark text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h1 class="text-white">About Us</h1>
-                <p class="mb-0 text-white-50">
-					We're <b>Comp-3 Interactive</b>. An indie game development company located in the North West of England. We provide free to play Android mobile games via the Google Play store.</br></br>
-					We also help both seasoned and beginner developers on their journey of game development by providing useful hints and tips for the Unity3D game engine via our Facebook, Instagram and Twitter accounts.</br></br>
-					Further to that, we also provide more in-depth tutorials for Unity3D on our YouTube channel which cover a wide array of subjects.</br></br>
-					Consider following and subscribing if you'd like to learn how to make your own games in a quick and painless way!</br></br></p>
-					
-					<div class="social d-flex justify-content-center">
-						<a href="http://www.youtube.com/comp3interactive" class="mx-2">
-							<i class="fab fa-youtube"></i>
-						</a>
-						<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
-							<i class="fab fa-facebook"></i>
-						</a>
-						<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
-							<i class="fab fa-instagram"></i>
-						</a>
-						<a href="http://www.twitter.com/comp3int" class="mx-2">
-							<i class="fab fa-twitter"></i>
-						</a>
-					</div>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-				<p class="mb-0 text-white-50"></br>
-					For business enquiries please contact: <a href="mailto:comp3.interactive@gmail.com">comp3.interactive@gmail.com</a>
-				</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <footer class="bg-dark small text-center text-white-50">
   	<div>
@@ -194,7 +156,10 @@
 			<i class="fab fa-instagram"></i>
 		</a>
 		<a href="http://www.twitter.com/comp3int" class="mx-2">
-			<i class="fab fa-twitter"></i> <p>
+			<i class="fab fa-twitter"></i>
+		</a>
+		<a href="http://www.github.com/comp3interactive" class="mx-2">
+			<i class="fab fa-github"></i>
 		</a>
 	</div>
     </div>
