--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" class="img-fluid" alt="">     Comp-3 Interactive</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" width="25px" height ="25px" class="img-fluid" alt="">     Comp-3 Interactive</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="previousprojects.html">Previous Projects</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="index.html#about">About Us</a>
+            <a class="nav-link js-scroll-trigger" href="aboutus.html">About Us</a>
           </li>
         </ul>
       </div>
@@ -82,8 +82,11 @@
 			<i class="fab fa-instagram"></i>
 		</a>
 		<a href="http://www.twitter.com/comp3int" class="mx-2">
-			<i class="fab fa-twitter"></i> <p>
+			<i class="fab fa-twitter"></i>
 		</a>
+		<a href="http://www.github.com/comp3interactive" class="mx-2">
+			<i class="fab fa-github"></i>
+		</a></br></br>
 	</div>
     </div>
   </footer>
