--- a/index.html
+++ b/index.html
@@ -115,19 +115,23 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <center><img class="img-fluid" src="img/Projects/SpeedDev.png" alt=""></center>
+          <center><img class="img-fluid" src="img/Projects/InvertBlock.png" alt=""></center>
         </div>
 		
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h1 class="text-white">Unknown Speed Development Project</h1>
+                <h1 class="text-white"><s>Unknown Speed Development Project</s></br>Invert</h1>
                 <p class="mb-0 text-white-50">
-					So it seems as though, in a drunken state, I challenged myself to develop a game and release it on Google Play within a week! This may have been a stupid idea but I may aswell give it a try!</br></br>
-					As of writing this I am approximatly 12 hours in to my given week and seem to have made some decent progress considering my state during the initial development!!</br></br>
-					I'll be posting further updates on Facebook regarding the development process and will be sure to announce it's release here too!</br></br>
-					WISH ME LUCK!
+					So it seems as though, in a drunken state, I challenged myself to develop a game and release it on Google Play within a week over the Christmas period. This may have been a stupid idea but I gave it a try and actually managed to do it!</br></br>
+					It took the full 7 days in total, that includes creation of all the assets, scripting, UI, testing, debugging and publishing times.</br></br>
+					The total development time clocked in at just under <b>17</b> hours with no pre-made assets or scripts. Everything was created by me from scratch.</br></br>
+					I didn't think I'd be able to get this completed but in the end it turned out as quite an addictive little game with a lot of elements in there that I didn't expect to be able to include, such as multiple characters and a shop!</br></br>
+					This is an open invite to ALL developers to give this 7 Day Dev Challenge a try! <u>So get coding!</u></br></br>
+					Invert is now available on the Google Play store for free, so please give it a try, leave a review and let me know what you think!</br></br>
+					
+					<button type="button" class="btn btn-dark" style="width:200px;height:5em;min-width:200px;" onclick="window.open('https://play.google.com/store/apps/details?id=com.Comp3Interactive.Invert')">Play Here</button>
 				</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
@@ -144,7 +148,7 @@
 		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
 	</div>
     <div class="container">
-      Copyright &copy; <b>Comp-3 Interactive 2019</b>.</br>All rights reserved.<p>
+      Copyright &copy; <b>Comp-3 Interactive 2020</b>.</br>All rights reserved.<p>
 	  <div class="social d-flex justify-content-center">
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
