--- a/404.html
+++ b/404.html
@@ -76,6 +76,9 @@
 			<i class="fab fa-youtube"></i>
 		</a>
 		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-discord"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
 		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
