--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
 	<div>
 		<p class="mb-0 text-white-50">Join Us</p>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt=""></br></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://discord.gg/wWFsdYy')"><img src="img/SocialIcons/Discord.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://github.com/Comp3interactive?tab=repositories')"><img src="img/SocialIcons/GitHub.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://comp3interactive.itch.io')"><img src="img/SocialIcons/ItchIO.png" class="img-fluid" alt=""></button>
-		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://www.linkedin.com/in/michael-lythgoe')"><img src="img/SocialIcons/LinkedIn.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://www.buymeacoffee.com/4dpS3yL')"><img src="img/SocialIcons/BuyMeACoffee.png" class="img-fluid" alt=""></button></br></br></br>
     </div>
   </section> 
@@ -152,6 +152,9 @@
 	  <div class="social d-flex justify-content-center">
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-discord"></i>
 		</a>
 		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
