--- a/previousprojects.html
+++ b/previousprojects.html
@@ -68,6 +68,9 @@
 			<i class="fab fa-youtube"></i>
 		</a>
 		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-discord"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
 		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
@@ -121,6 +124,9 @@
 	  <div class="social d-flex justify-content-center">
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-discord"></i>
 		</a>
 		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
