--- a/aboutus.html
+++ b/aboutus.html
@@ -66,6 +66,9 @@
 			<i class="fab fa-youtube"></i>
 		</a>
 		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-discord"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
 		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
@@ -98,22 +101,29 @@
 					Further to that, we also provide more in-depth tutorials for Unity3D on our YouTube channel which cover a wide array of subjects.</br></br>
 					Consider following and subscribing if you'd like to learn how to make your own games in a quick and painless way!</br></br></p>
 					
+					<iframe width="248" height="140" src="https://www.youtube.com/embed/TeyWW7fEWyM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></br></br>
+					
 					<div class="social d-flex justify-content-center">
-						<a href="http://www.youtube.com/comp3interactive" class="mx-2">
-							<i class="fab fa-youtube"></i>
-						</a>
-						<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
-							<i class="fab fa-facebook"></i>
-						</a>
-						<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
-							<i class="fab fa-instagram"></i>
-						</a>
-						<a href="http://www.twitter.com/comp3int" class="mx-2">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="http://www.github.com/comp3interactive" class="mx-2">
-							<i class="fab fa-github"></i>
-						</a>
+						<div class="social d-flex justify-content-center">
+							<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+								<i class="fab fa-youtube"></i>
+							</a>
+							<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+								<i class="fab fa-discord"></i>
+							</a>
+							<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+								<i class="fab fa-facebook"></i>
+							</a>
+							<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+								<i class="fab fa-instagram"></i>
+							</a>
+							<a href="http://www.twitter.com/comp3int" class="mx-2">
+								<i class="fab fa-twitter"></i>
+							</a>
+							<a href="http://www.github.com/comp3interactive" class="mx-2">
+								<i class="fab fa-github"></i>
+							</a>
+						</div>
 					</div>
                 <hr class="d-none d-lg-block mb-0 ml-0">
 				<p class="mb-0 text-white-50"></br>
@@ -136,6 +146,9 @@
 	  <div class="social d-flex justify-content-center">
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
+		</a>
+		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+			<i class="fab fa-discord"></i>
 		</a>
 		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
