--- a/404.html
+++ b/404.html
@@ -75,13 +75,13 @@
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
 		<a href="http://www.twitter.com/comp3int" class="mx-2">
