--- a/aboutus.html
+++ b/aboutus.html
@@ -65,13 +65,13 @@
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
 		<a href="http://www.twitter.com/comp3int" class="mx-2">
@@ -108,13 +108,13 @@
 							<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 								<i class="fab fa-youtube"></i>
 							</a>
-							<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+							<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 								<i class="fab fa-discord"></i>
 							</a>
-							<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+							<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 								<i class="fab fa-facebook"></i>
 							</a>
-							<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+							<a href="http://www.instagram.com/comp3interactive" class="mx-2">
 								<i class="fab fa-instagram"></i>
 							</a>
 							<a href="http://www.twitter.com/comp3int" class="mx-2">
@@ -147,13 +147,13 @@
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
 		<a href="http://www.twitter.com/comp3int" class="mx-2">
