--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 		<p class="mb-0 text-white-50">Join Us</p>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt=""></br></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://discord.gg/wWFsdYy')"><img src="img/SocialIcons/Discord.png" class="img-fluid" alt=""></button>
-		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.facebook.com/comp3.interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt=""></button>
-		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.instagram.com/comp3.interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.facebook.com/comp3interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt=""></button>
+		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.instagram.com/comp3interactive')"><img src="img/SocialIcons/Instagram.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.twitter.com/comp3int')"><img src="img/SocialIcons/Twitter.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://play.google.com/store/apps/dev?id=7011346453411226050')"><img src="img/SocialIcons/GooglePlay.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://github.com/Comp3interactive?tab=repositories')"><img src="img/SocialIcons/GitHub.png" class="img-fluid" alt=""></button>
@@ -153,13 +153,13 @@
 		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3.interactive" class="mx-2">
+		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3.interactive" class="mx-2">
+		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
 		<a href="http://www.twitter.com/comp3int" class="mx-2">
