--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="css/grayscale.min.css" rel="stylesheet">
   
   <!-- Fav Icon -->
-  <link rel="shortcut icon" type="image/png" href="img/NavBarIcon.jpg"/>
+  <link rel="shortcut icon" type="image/jpg" href="img/NavBarIcon.jpg"/>
 
 </head>
 
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" width="25px" height ="25px" class="img-fluid" alt="">     GameDevCoders</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.jpg" width="25px" height ="25px" class="img-fluid" alt="">     GameDevCoders</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <img src="img/WebsiteHeader.jpg" class="img-fluid" alt="">
+          <img src="img/WebsiteHeader.png" class="img-fluid" alt="">
         </div>
       </div>
 	  
