--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Comp-3 Interactive</title>
+  <title>GameDevCoders</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <link href="css/grayscale.min.css" rel="stylesheet">
   
   <!-- Fav Icon -->
-  <link rel="shortcut icon" type="image/png" href="img/NavBarIcon.png"/>
+  <link rel="shortcut icon" type="image/jpg" href="img/NavBarIcon.jpg"/>
 
 </head>
 
@@ -30,7 +30,7 @@
   <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" width="25px" height ="25px" class="img-fluid" alt="">     Comp-3 Interactive</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.jpg" width="25px" height ="25px" class="img-fluid" alt="">     GameDevCoders</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -67,27 +67,27 @@
 
   <footer class="bg-dark small text-center text-white-50">
   	<div>
-		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
+		<a href="#page-top"><img src="img/NavBarIcon.jpg"></a></p>
 	</div>
     <div class="container">
       Copyright &copy; <b>Comp-3 Interactive 2020</b>.</br>All rights reserved.<p>
 	  <div class="social d-flex justify-content-center">
-		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
+		<a href="https://www.instagram.com/gamedev_coders/" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
-		<a href="http://www.twitter.com/comp3int" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-twitter"></i>
 		</a>
-		<a href="http://www.github.com/comp3interactive" class="mx-2">
+		<a href="https://github.com/gamedevcoders" class="mx-2">
 			<i class="fab fa-github"></i>
 		</a></br></br>
 	</div>
