--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Comp-3 Interactive</title>
+  <title>GameDevCoders</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
   <link href="css/grayscale.min.css" rel="stylesheet">
   
   <!-- Fav Icon -->
-  <link rel="shortcut icon" type="image/png" href="img/NavBarIcon.png"/>
+  <link rel="shortcut icon" type="image/jpg" href="img/NavBarIcon.jpg"/>
 
 </head>
 
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.png" width="25px" height ="25px" class="img-fluid" alt="">     Comp-3 Interactive</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/NavBarIcon.jpg" width="25px" height ="25px" class="img-fluid" alt="">     Comp-3 Interactive</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -62,22 +62,22 @@
         </div>
       </div>
 	  	<div class="social d-flex justify-content-center">
-		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
+		<a href="https://www.instagram.com/gamedev_coders/" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
-		<a href="http://www.twitter.com/comp3int" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-twitter"></i>
 		</a>
-		<a href="http://www.github.com/comp3interactive" class="mx-2">
+		<a href="https://github.com/gamedevcoders" class="mx-2">
 			<i class="fab fa-github"></i>
 		</a></br></br>
 	</div>
@@ -96,38 +96,38 @@
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h1 class="text-white">About Us</h1>
                 <p class="mb-0 text-white-50">
-					We're <b>Comp-3 Interactive</b>. An indie game development company located in the North West of England. We provide free to play Android mobile games via the Google Play store.</br></br>
+					We're <b>GameDevCoders</b>. An indie game development company located in the West of India. We provide free to play Android mobile games via the Google Play store.</br></br>
 					We also help both seasoned and beginner developers on their journey of game development by providing useful hints and tips for the Unity3D game engine via our Facebook, Instagram and Twitter accounts.</br></br>
 					Further to that, we also provide more in-depth tutorials for Unity3D on our YouTube channel which cover a wide array of subjects.</br></br>
 					Consider following and subscribing if you'd like to learn how to make your own games in a quick and painless way!</br></br></p>
 					
-					<iframe width="248" height="140" src="https://www.youtube.com/embed/TeyWW7fEWyM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></br></br>
+					<iframe width="248" height="140" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></br></br>
 					
 					<div class="social d-flex justify-content-center">
 						<div class="social d-flex justify-content-center">
-							<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+							<a href="" class="mx-2">
 								<i class="fab fa-youtube"></i>
 							</a>
-							<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+							<a href="" class="mx-2">
 								<i class="fab fa-discord"></i>
 							</a>
-							<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+							<a href="" class="mx-2">
 								<i class="fab fa-facebook"></i>
 							</a>
-							<a href="http://www.instagram.com/comp3interactive" class="mx-2">
+							<a href="https://www.instagram.com/gamedev_coders/" class="mx-2">
 								<i class="fab fa-instagram"></i>
 							</a>
-							<a href="http://www.twitter.com/comp3int" class="mx-2">
+							<a href="" class="mx-2">
 								<i class="fab fa-twitter"></i>
 							</a>
-							<a href="http://www.github.com/comp3interactive" class="mx-2">
+							<a href="https://github.com/gamedevcoders" class="mx-2">
 								<i class="fab fa-github"></i>
 							</a>
 						</div>
 					</div>
                 <hr class="d-none d-lg-block mb-0 ml-0">
 				<p class="mb-0 text-white-50"></br>
-					For business enquiries please contact: <a href="mailto:comp3.interactive@gmail.com">comp3.interactive@gmail.com</a>
+					For business enquiries please contact: <a href="mailto:ignitesgames@gmail.com">ignitesgames@gmail.com</a>
 				</p>
               </div>
             </div>
@@ -139,27 +139,27 @@
 
   <footer class="bg-dark small text-center text-white-50">
   	<div>
-		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
+		<a href="#page-top"><img src="img/NavBarIcon.jpg"></a></p>
 	</div>
     <div class="container">
       Copyright &copy; <b>Comp-3 Interactive 2020</b>.</br>All rights reserved.<p>
 	  <div class="social d-flex justify-content-center">
-		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
+		<a href="https://www.instagram.com/gamedev_coders/" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
-		<a href="http://www.twitter.com/comp3int" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-twitter"></i>
 		</a>
-		<a href="http://www.github.com/comp3interactive" class="mx-2">
+		<a href="https://github.com/gamedevcoders" class="mx-2">
 			<i class="fab fa-github"></i>
 		</a>
 	</div>
