--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	  <!-- Header Links -->	
 	  
 	<div>
-		<p class="mb-0 text-white-50">Join Us</p>
+		<p class="mb-0 text-white-50"></p>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.youtube.com/comp3interactive')"><img src="img/SocialIcons/YouTube.png" class="img-fluid" alt=""></br></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('https://discord.gg/wWFsdYy')"><img src="img/SocialIcons/Discord.png" class="img-fluid" alt=""></button>
 		<button type="button" class="btn btn-dark" style="width:100px;height:7em;min-width:100px;min-height:7em;padding:5px; margin-bottom:5px;" onclick="window.open('http://www.facebook.com/comp3interactive')"><img src="img/SocialIcons/Facebook.png" class="img-fluid" alt=""></button>
@@ -145,27 +145,27 @@
 
   <footer class="bg-dark small text-center text-white-50">
   	<div>
-		<a href="#page-top"><img src="img/NavBarIcon.png"></a></p>
+		<a href="#page-top"><img src="img/NavBarIcon.jpg"></a></p>
 	</div>
     <div class="container">
       Copyright &copy; <b>Comp-3 Interactive 2020</b>.</br>All rights reserved.<p>
 	  <div class="social d-flex justify-content-center">
-		<a href="http://www.youtube.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-youtube"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-discord"></i>
 		</a>
-		<a href="http://www.facebook.com/comp3interactive" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-facebook"></i>
 		</a>
-		<a href="http://www.instagram.com/comp3interactive" class="mx-2">
+		<a href="https://www.instagram.com/gamedev_coders/" class="mx-2">
 			<i class="fab fa-instagram"></i>
 		</a>
-		<a href="http://www.twitter.com/comp3int" class="mx-2">
+		<a href="" class="mx-2">
 			<i class="fab fa-twitter"></i>
 		</a>
-		<a href="http://www.github.com/comp3interactive" class="mx-2">
+		<a href="https://github.com/gamedevcoders" class="mx-2">
 			<i class="fab fa-github"></i>
 		</a>
 	</div>
